# lantern-doc-extractor

./: .gitignore  README.md  improvements.txt  pyproject.toml
archive/: app_simple.py  extractorV2.py
config/: extraction_config.json
outputs/: 1.json
src/: app.py  extractor.py  main.py
tests/: test_extractor.py
