[project]
name = "wrapup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pypdf>=6.9.1",
    "pytesseract>=0.3.13",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
